# coolboard

./: .eslintrc  .eslintrc.js  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  .prettierrc  .yarnrc.yml  README.md  codegen.ts  codegen.yml  eslint.config.js  instrumentation.js  middleware.ts  netlify.toml  next.config.js  package-lock.json  package.json  renovate.json  semantic.json  storeMetaInfo.sh  storeMetainfo.sh  trigger-circleci-smoke.sh  tsconfig.json  vercel.json
.circleci/: config.yml
api/: graphql.js
pages/: _app.js  _app.tsx  _document.js  _document.tsx  about.js  about.tsx  boards.js  boards.tsx  callback.js  callback.tsx  imprint.js  imprint.tsx  index.js  index.tsx  login.js  login.tsx  logout.js  logout.tsx  privacy.js  privacy.tsx
prisma/: schema.prisma
public/: _redirects  callback-cross-auth.html  home.html  imprint.html  index.css  index.html  manifest.json  privacy.html  robot.txt  werifei-aua0-3rdparty.html
server/: .env.local  .eslintrc  .eslintrc.json  .gitignore  .graphqlconfig.yml  README.md  babel.config.json  docker-compose.yml  graphql.ts  initTracing.tsx  instanaInit.ts  instrumentation-edge.js  instrumentation-node.js  netlify.toml  openTelemetry.tsx  package.json  prisma.yml  schema.json
smoketest/: .eslintrc  .snyk  cypress-local.json  cypress.config.js  cypress.config.mjs  cypress.config.ts  cypress.env.json  cypress.json  package-lock.json  (+5 more)
smoketest/check-deployed-version/: Cargo.toml  package-lock.json  package.json  wait-for-deployment.mjs
smoketest/check-deployed-version/src/: main-future.rs  main.rs
(+237 files in other folders)
