[package]
name = "check-deployed-version"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12"
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }

#[x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
#openssl-sys = { version = "0.9" }
